--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,7 +8,7 @@ body{
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para, .text.child{
   font-size: 14px;
   font-weight: 800;
 }
@@ -17,8 +17,8 @@ body{
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
+.confirm.button {
+  background: rgb(7, 155, 7);
   color: white;
   font-weight: bold;
 } 
